# TMS_async_aiohttp

./: .gitignore  alembic.ini  db_test.py  files_downloader.py  main.py  pyproject.toml
app/: cache.py  db_session.py  filters.py  models.py  services.py  urls.py  views.py
app/middlewares/: __init__.py  auth.py  session.py
app/services/: auth.py  notes.py  users.py
migrations/versions/: 54f8e3832c93_0002_add_tags.py  7189a23171d7_0001_init.py
templates/: base.html  footer.html  header.html  list_create_note.html  login.html
